--- a/src/app/components/all-heroes/all-heroes.component.html
+++ b/src/app/components/all-heroes/all-heroes.component.html
@@ -4,7 +4,7 @@
 </div>
 <div class="heroes-list">
   <a [routerLink]="['/hero', hero.id]" *ngFor="let hero of heroes">
-    <img [src]="hero.image" alt="{{ hero.name }}">
+    <img [src]="hero.images.sm" alt="{{ hero.name }}">
   </a>
 
 <!--  @for (hero of heroes; track $index) {-->
