--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-title></app-title>
-<router-outlet></router-outlet>
+<app-title routerLink="" class="cursor-pointer"></app-title>
+<div class="bg-gradient-to-bl from-blue-500 to-amber-600 p-4 m-4 h-full">
+  <router-outlet></router-outlet>
+</div>
+
